# ros-repo-5

./: .gitignore  README.md
admin/ai_server_package/ai_server_package/: ai_server.py
admin/controll_server_package/controll_server_pkg/: setup.py
admin/src/: Camera_calibration.py  check_board_save.py  driving_rec.py
admin/src/admin_gui/: CmdVelSubscriber.py  Icon_coordinates_for_main.py  admin_gui_test.py  icon_coordination_for_individual.py  individual.py  individual.ui  log.py  log.ui  main.py  main.ui  ros_manager.py  test.py
admin/src/ai_server/ai_server_package/: package.xml  setup.py
admin/src/ai_server/ai_server_package_msgs/: CMakeLists.txt  package.xml
admin/src/ai_server/ai_train/: VideoPreporcessing.py  convert_labelme_to_yolo_seg.py  driving_rec.py  (+5 more)
admin/src/ai_server_package/: setup.cfg
admin/src/controll_server_package_msgs/: CMakeLists.txt  package.xml
admin/src/controll_server_package_msgs/msg/: TaxiState.msg
admin/src/controll_server_package_msgs/srv/: TaxiEvent.srv
admin/src/gui/: admin_gui_main.py
deeplearnig/road_segementation/:  realtime_lane_segmentation.py  convert_labelme_to_yolo.py  merge_labelme_to_yolo.py
pinky/pinky_ESP32/: pinky_ESP32.ino
src/addintexi_motion/: package.xml  setup.cfg  setup.py
src/addintexi_motion/addintexi_motion/: command_server.py  motion_controll.py
trafficLight/: TrafficLight.py  TrafficLight.ui  TrafficLight_test.ino  espTraficLight.ino  trafic_wifi_ESP32.ino
user/src/: IconHandler.py  Icon_coordinates.py  LeftMoney.py  Main.py  Main.ui  Pinkymanager.py  Restapi.py  UserSession.py  call.py  charge.py  charge_page.py  destination.py  driving.py  end.py  icon_coordinates.py  login.py  main.py  main_utils.py  riding.py  state.py  test.py  ui_utils.py
user/src/ui/: 0_Main.ui  1_Call.ui  1_call.ui  2_destination.ui  2_riding.ui  3_driving.ui  3_riding.ui  4_driving.ui  4_end.ui  5_end.ui  Charge.ui  Login.ui  Main.ui  X_Call.ui
(+36 files in other folders)
