<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controll_server_package_msgs</name>
  <version>0.0.0</version>
  <description>Package containing service definitions for controll_server</description>
  <maintainer email="khkh6380@gmail.com">jack</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- ✅ 메시지 생성 도구 -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- ✅ 기본 내장 메시지 타입 의존성 -->
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <!-- ✅ 메시지 사용 런타임 의존성 -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- ✅ 추가: std_msgs 메시지 타입 의존성 (TaxiState.msg에서 사용 시) -->
  <build_depend>std_msgs</build_depend>            <!-- ⬅️ 추가 -->
  <exec_depend>std_msgs</exec_depend>              <!-- ⬅️ 추가 -->

  <!-- ✅ rosidl interface 패키지로 선언 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
